# polars-rp

crates/polars/: Cargo.toml
crates/polars-async/: Cargo.toml
crates/polars-async/src/: lib.rs
crates/polars-core/: Cargo.toml
crates/polars-core/src/: runtime.rs
crates/polars-io/: Cargo.toml
crates/polars-io/src/path_utils/: mod.rs
crates/polars-io/src/utils/: byte_source.rs  mkdir.rs
crates/polars-utils/: Cargo.toml
crates/polars-utils/src/: live_timer.rs
